[package]
name = "stok"
version = "0.1.0"
edition = "2021"

[[bin]]
name="stok-server"
path="src/server.rs"

[[bin]]
name="stok-client"
path="src/client.rs"

[dependencies]
dashmap = "5.5.0"
ordered-float = "3.7.0"
thiserror = "1.0.44"
env_logger = "0.10.0"
log = "0.4"
tracing = "0.1"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tracing-subscriber = "0.3"
tokio = { version = "1.32", features = ["full"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio-stream = {version = "0.1", features = ["sync"]}
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.10"

